assert(left <= -1 && top <= -1 && right >= 1 && bottom >= 1) fails in si_emit_guardband
With current Git master of mutter
(3.37): (I hit it in Wayland mode, but might be reproducible on Xorg as well)
- Trigger the activities overview, by pressing the Super key or moving the cursor to the top left corner
- Type "e" in the search box (if that's not enough, try typing more)
This triggers a glViewport(0x80000000, 0x80000000, ...)
call. clamp_viewport
clamps the x/y parameters to ctx->Const.ViewportBounds.Min = -32768
, but the assertion still fails:
#0 __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50
#1 0x00007f550c338537 in __GI_abort () at abort.c:79
#2 0x00007f550c33840f in __assert_fail_base
(fmt=0x7f550c4a1128 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", assertion=0x7f54f658bfe8 "left <= -1 && top <= -1 && right >= 1 && bottom >= 1", file=0x7f54f658be90 "../src/gallium/drivers/radeonsi/si_state_viewport.c", line=285, function=<optimized out>) at assert.c:92
#3 0x00007f550c3475b2 in __GI___assert_fail
(assertion=0x7f54f658bfe8 "left <= -1 && top <= -1 && right >= 1 && bottom >= 1", file=0x7f54f658be90 "../src/gallium/drivers/radeonsi/si_state_viewport.c", line=285, function=0x7f54f658c0a0 <__PRETTY_FUNCTION__.5> "si_emit_guardband") at assert.c:101
#4 0x00007f54f739118a in si_emit_guardband (ctx=0x55e71a16f270) at ../src/gallium/drivers/radeonsi/si_state_viewport.c:285
#5 0x00007f54f737e016 in si_emit_all_states (sctx=0x55e71a16f270, info=0x55e71a151588, prim=PIPE_PRIM_TRIANGLE_STRIP, instance_count=1, primitive_restart=false, skip_atom_mask=0)
at ../src/gallium/drivers/radeonsi/si_state_draw.c:1488
#6 0x00007f54f737f86f in si_draw_vbo (ctx=0x55e71a16f270, info=0x55e71a151588) at ../src/gallium/drivers/radeonsi/si_state_draw.c:2011
#7 0x00007f54f7200645 in tc_call_draw_vbo (pipe=0x55e71a16f270, payload=0x55e71a151588) at ../src/gallium/auxiliary/util/u_threaded_context.c:2106
#8 0x00007f54f71fb661 in tc_batch_execute (job=0x55e71a150d30, thread_index=0) at ../src/gallium/auxiliary/util/u_threaded_context.c:96
#9 0x00007f54f6d5ca46 in util_queue_thread_func (input=0x55e719fdd0e0) at ../src/util/u_queue.c:308
#10 0x00007f54f6d5bcb3 in impl_thrd_routine (p=0x55e719fc7b60) at ../include/c11/threads_posix.h:87
#11 0x00007f550b885ea7 in start_thread (arg=<optimized out>) at pthread_create.c:477
#12 0x00007f550c410eaf in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95